# netordering

./: CMakeLists.txt  README.md
net/: CMakeLists.txt  main.cpp  net.hpp
net/include/netordering/: net.hpp
net/src/: net.cpp
